fix overflow issues with flexbox

--- a/styles.css
+++ b/styles.css
@@ -23,21 +23,19 @@ header {
   box-shadow: 0 4px 2px -3px grey;
   background-color: white;
   z-index: 2;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 header .name {
-  position: absolute;
   text-align: center;
   font-family: "Montserrat", sans-serif;
   letter-spacing: 2px;
   font-size: 15px;
-  left: 50%;
-  margin-left: -85px;
-  top: 40%;
 }
 
 header .favicon {
-  position: absolute;
   height: 60px;
   width: 60px;
   margin-left: 1.5%;
@@ -55,17 +53,16 @@ footer {
   height: 100px;
   box-shadow: 0 -4px 2px -3px grey;
   background-color: white;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 footer .copyright {
-  position: absolute;
   text-align: center;
   font-family: "NTR", sans-serif;
   letter-spacing: 2px;
   font-size: 15px;
-  left: 50%;
-  margin-left: -115px;
-  top: 40%;
 }
 
 .about-container {
@@ -107,33 +104,25 @@ footer .copyright {
   margin-top: 5%;
   max-width: 50%;
   margin: 5%;
-  display: flex;
-  flex-direction: column;
 }
 
 .card {
   box-shadow: 5px 5px 7px -2px rgba(0, 0, 0, 0.5);
-  max-height: 35em;
   max-width: 35em;
   margin-top: 5%;
   margin-bottom: 5%;
-  max-width: 100%;
+  width: 100%;
   display: block;
-  position: relative;
-  flex: 1;
 }
 
 .card .card-image {
   background: #ffd7bc;
-  height: 28em;
-  width: 35em;
-  max-width: 100%;
+  width: 100%;
 }
 
 .card .card-discription {
   background: #ffffff;
   min-height: 7em;
-  width: 35em;
   margin-bottom: 10%;
   max-width: 100%;
 }
@@ -142,7 +131,6 @@ footer .copyright {
   font-family: Rubik;
   padding: 20px;
   text-align: left;
-  position: absolute;
 }
 
 .card-discription .stack {
@@ -150,10 +138,6 @@ footer .copyright {
 }
 
 .dropbtn {
-  float: right;
-  margin-right: 10%;
-  margin-top: 30px;
-  padding-bottom: 16px;
   font-family: "Quicksand", sans-serif;
 }
 
@@ -164,19 +148,17 @@ footer .copyright {
   display: none;
 }
 
+.dropdown-content {
+  display: block;
+  background-color: #f9f9f9;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  width: 100px;  
+  z-index: 100;
+}
+
 .dropbtn:hover .icon {
   transition: 0.5s;
   transform: rotateX(180deg);
-}
-
-.dropdown-content {
-  position: absolute;
-  background-color: #f9f9f9;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-  margin-top: 16px;
-  width: 100px;
-  max-width: 100px;
 }
 
 .dropdown-content p {
